--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Tab 3</string>
+    <string name="timeFormat">Time</string>
+    <string name="dateFormat">Date</string>
+    <string name="period">"EE, dd"</string>
 
 
 </resources>
