--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="order_id_mock" translatable="false"># 1234–5678</string>
     <string name="price_mock" translatable="false">25€</string>
     <string name="requests_count_mock" translatable="false">5</string>
-    <string name="requests_count_badge" translatable="false">LUGARES</string>
+    <string name="requests_count_badge" translatable="false">HORA</string>
     <string name="weight_mock" translatable="false">50 oz</string>
-    <string name="weight_badge" translatable="false">WEIGHT</string>
+    <string name="weight_badge" translatable="false">DURAÇÃO</string>
     <string name="pledge_mock" translatable="false">$150</string>
     <string name="pledge_badge" translatable="false">PLEDGE</string>
     <string name="sender_badge" translatable="false">SENDER</string>
@@ -37,7 +37,7 @@
     <string name="request_btn_text" translatable="false">CONFIRMAR</string>
     <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
     <string name="content_from1_mock">Porto - Rua Manuel Carqueja, 207</string>
-    <string name="content_to1_mock">Maia - Lugar do Espido, Via Norte</string>
+    <string name="content_to_mock">Maia - Lugar do Espido, Via Norte</string>
     <string name="avatar_name">Fernando</string>
     <string name="title_activity_main2">Main2Activity</string>
 
