--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,23 +16,20 @@
 
     <!-- FOLDING -->
 
-    <string name="order_id_mock" translatable="false"># 1234–5678</string>
     <string name="price_mock" translatable="false">25€</string>
     <string name="requests_count_mock" translatable="false">5</string>
     <string name="requests_count_badge" translatable="false">HORA</string>
     <string name="weight_mock" translatable="false">50 oz</string>
     <string name="weight_badge" translatable="false">DURAÇÃO</string>
-    <string name="pledge_mock" translatable="false">$150</string>
-    <string name="pledge_badge" translatable="false">PLEDGE</string>
-    <string name="sender_badge" translatable="false">SENDER</string>
-    <string name="client_name_mock" translatable="false">Edward Norton</string>
+    <string name="sender_badge" translatable="false">CONDUTOR</string>
+    <string name="client_name_mock" translatable="false">Fernando</string>
     <string name="rating_mock" translatable="false">(26)</string>
-    <string name="from_badge" translatable="false">FROM</string>
-    <string name="to_badge" translatable="false">TO</string>
-    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
+    <string name="from_badge" translatable="false">ORIGEM</string>
+    <string name="to_badge" translatable="false">DESTINO</string>
+    <string name="delivery_date_badge" translatable="false">INÍCIO DA VIAGEM</string>
     <string name="delivery_time_mock" translatable="false">6:30 pm</string>
     <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
-    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
+    <string name="deadline_badge" translatable="false">DURAÇÃO ESTIMADA</string>
     <string name="deadline_time_mock" translatable="false">24 minutes</string>
     <string name="request_btn_text" translatable="false">CONFIRMAR</string>
     <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
